force-app/main/default/objects/Lead/fields/Vehicle_For_Company__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_For_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle For Company?</label>
    <type>Checkbox</type>
</CustomField>