force-app/main/default/objects/Lead/validationRules/Lead_converted_only_if_Dealer_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_converted_only_if_Dealer_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsConverted,
    
     ISBLANK( Dealer__c )
    )</errorConditionFormula>
    <errorMessage>Lead can be converted only if Dealer is selected!!!</errorMessage>
</ValidationRule>