force-app/main/default/objects/Lead/validationRules/Lead_Dealer_Selection_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Dealer_Selection_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     NOT(ISBLANK(Dealer__c)),

      ISBLANK( TEXT(State__c) ) 
    )</errorConditionFormula>
    <errorDisplayField>Dealer__c</errorDisplayField>
    <errorMessage>Dealer can not be chosen, unless  State is chosen</errorMessage>
</ValidationRule>