force-app/main/default/objects/Lead/validationRules/Lead_EIN_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_EIN_field_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( EIN__c , &quot;[0-9]{9}&quot;) || LEN(EIN__c) =0 )</errorConditionFormula>
    <errorDisplayField>EIN__c</errorDisplayField>
    <errorMessage>EIN field should contain only number and should be 9 digits.</errorMessage>
</ValidationRule>