force-app/main/default/objects/Lead/validationRules/Lead_Email_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Email_field_validation</fullName>
    <active>true</active>
    <errorConditionFormula>DoNotCall  &amp;&amp; ISBLANK(   Email   )</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>The email field must be given if phone communication is opted out.</errorMessage>
</ValidationRule>