force-app/main/default/objects/Lead/validationRules/Lead_SSN_field_Validation_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_SSN_field_Validation_Rules</fullName>
    <active>true</active>
    <description>Create SSN text field on lead obj : 
*SSN field should contain only number,
*SSN field should be unique,
*SSN field should be 9 digits.</description>
    <errorConditionFormula>NOT(REGEX( SSN__c , &quot;[0-9]{9}&quot;) || LEN(SSN__c)=0 )</errorConditionFormula>
    <errorDisplayField>SSN__c</errorDisplayField>
    <errorMessage>*SSN field should contain only number,
*SSN field should be unique,
*SSN field should be 9 digits.</errorMessage>
</ValidationRule>