force-app/main/default/objects/Lead/validationRules/LeadCommunicationChannelsValidation14.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadCommunicationChannelsValidation14</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   HasOptedOutOfEmail ,
   DoNotCall 
)</errorConditionFormula>
    <errorMessage>Do Not Call and Email Opt Out can not be selected together!!!!</errorMessage>
</ValidationRule>