force-app/main/default/objects/Lead/validationRules/LeadPhoneField12.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadPhoneField12</fullName>
    <active>true</active>
    <description>Lead Phone field is not empty if email communication is opted out by customer</description>
    <errorConditionFormula>HasOptedOutOfEmail &amp;&amp; isblank(Phone)</errorConditionFormula>
    <errorDisplayField>HasOptedOutOfEmail</errorDisplayField>
    <errorMessage>Lead Phone field is not empty if email communication is opted out by customer</errorMessage>
</ValidationRule>