force-app/main/default/objects/Lead/validationRules/Vehicle_For_Company_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_For_Company_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Vehicle_For_Company__c = true,
OR(
ISBLANK(Company),
ISBLANK(EIN__c)
)
)</errorConditionFormula>
    <errorMessage>The company name and the EIN must be provided if the vehicle is planned to be purchased for the company.</errorMessage>
</ValidationRule>