force-app/main/default/objects/Lead/listViews/Company_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Company_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Company Leads</label>
    <queue>Company_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>