force-app/main/default/objects/Lead/listViews/Individual_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Individual_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Individual Leads</label>
    <queue>Individual_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>